fix: carousel dots wrap and long email and username

--- a/src/SubComponents/Carousel.css
+++ b/src/SubComponents/Carousel.css
@@ -85,6 +85,7 @@
   display: flex !important;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .pelcro-root .slick-dots li {
   padding: 2px;
